stop scrollbar from adjusting page width

--- a/public/style.scss
+++ b/public/style.scss
@@ -4,6 +4,7 @@
 
 body {
   padding-top: 3em;
+  overflow-y: scroll;
 }
 
 .card-title {
